# pypngw2

./: MANIFEST.in  README.md  __init__.py  prec.py  setup.py
libcore/: main.c
libprec/: CMakeLists.txt  pngwprec_Utils.h
pypngw2/: CMakeLists.txt  __init__.py  _native.py  ctypes_struct.py  pngwtd.py  setup.py
pypngw2/libbasic/: CMakeLists.txt  basic.h  basic_Alloc.c  basic_Constants.h
pypngw2/libcore/: CMakeLists.txt  pngw.c  pngw_Datatypes.h  pngw_Epart.c  pngw_LEpart.c  pngw_Lpart.c  pngw_Upart.c  pngw_Utils.c  pngw_Utils.h
pypngw2/libpnfourier/: CMakeLists.txt  pnFourier.c  pnFourier.h  pnFourier_Jpqa0.c  pnFourier_Jpqa0.h  pnFourier_Jpqab.c  pnFourier_Jpqab.h  pnFourier_Kpqab.c  pnFourier_Kpqab.h  pnFourier_structs.h  pnFourier_utils.c  pnFourier_utils.h
pypngw2/libpngw3/: CMakeLists.txt  interface.c  main.c  pngw3.c  pngw3.h  pngw3_Datatypes.h  pngw3_Utils.c  pngw3_Utils.h  pngw3_ehfunc.c  pngw3_ehfunc.h  pngw3_evolve.c  pngw3_evolve.h
pypngw2/libpngw3/src_hlm/: pngw3_hlms.h  pngw3_l2.c  pngw3_l3.c  pngw3_l4.c  pngw3_l5.c  pngw3_l8.c
pypngw2/libprec/: pngwprec_Datatypes.h  pngwprec_Utils.c
